<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vista.registrado">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/CarnetDigitalTXT"
            android:textSize="25sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/NombreEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/icono_nombres"
                android:drawablePadding="10dp"
                android:hint="@string/NombreEt"
                android:padding="20dp"
                tools:ignore="Autofill,TextContrastCheck,TextContrastCheck,TextFields" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/Numero_ficha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/icono_correo"
                android:drawablePadding="10dp"
                android:hint="@string/Numero_ficha"
                android:padding="20dp"
                tools:ignore="Autofill,TextContrastCheck,TextFields" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/rut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/icono_password"
                android:drawablePadding="10dp"
                android:hint="@string/rut"
                android:padding="20dp"
                tools:ignore="Autofill,TextContrastCheck,TextFields" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/Fecha_inicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/calendario_icono"
                android:drawablePadding="10dp"
                android:hint="@string/Fecha_inicio"
                android:padding="20dp"
                tools:ignore="Autofill,TextContrastCheck,TextFields" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/NombreMe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/icono_nombres"
                android:drawablePadding="10dp"
                android:hint="@string/NombreMe"
                android:padding="20dp"
                tools:ignore="Autofill,TextFields,TextContrastCheck,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/editar_perfil"
            android:text="@string/editar_perfil"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />
        <Button
            android:id="@+id/ver_horas"
            android:text="@string/ver_horas"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>